@@ -23,9 +23,6 @@ load_lib "dejagnu.exp"
 #strace $tracelevel
 # exp_internal -f dbg.log 1
 
-# Execute everything in the test subdir so all the output files go there.
-cd $subdir
-
 # Get the size of the module being tested.
 set sizes [exe_size "unit"]
 if {[lindex $sizes 0] == "-1"} {
@@ -49,13 +46,3 @@ verbose "Data section size of proctor is 0x$datasize"
 if { [host_execute "unit"] != "" } {
     perror "unit had an execution error" 0
 }
-
-# All done, back to the top level test directory
-cd ..
-
-
-
-
-
-
-
